--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-"develop": "env-cmd  gatsby develop",
+    "develop": "env-cmd  gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "env-cmd": "^9.0.3",
     "gatsby": "^2.13.73",
     "gatsby-plugin-sass": "^2.1.11",
+    "gatsby-source-filesystem": "^2.1.21",
+    "gatsby-transformer-remark": "^2.6.21",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.0.1",
     "prettier": "^1.18.2"
   },
   "repository": {
