--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "gatsby": "^2.13.73",
     "gatsby-plugin-sass": "^2.1.11",
+    "gatsby-plugin-sharp": "^2.2.19",
+    "gatsby-remark-images": "^3.1.20",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.21",
     "gatsby-transformer-remark": "^2.6.21",
     "node-sass": "^4.12.0",
